:lipstick: alignement of nav fixed + rest of the page centered

--- a/style.css
+++ b/style.css
@@ -16,8 +16,10 @@ body
 
 ol
 {
-    margin: 0;
-    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     list-style-type: none;
 }
 
@@ -31,7 +33,7 @@ ol
 .menu li
 {
     display: inline-block;
-    padding: 24px;
+    padding: 0 24px;
 }
 
 .menu li a
@@ -70,6 +72,13 @@ a:visited
 /**
 * Content
  */
+
+.content
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 h1
 {
